Fixes wonky layout issue on projects.

--- a/assets/_sass/_custom.scss
+++ b/assets/_sass/_custom.scss
@@ -168,13 +168,12 @@ img.project-git-human {
     img {
         float: left;
         width: 100%;
-        padding-bottom: 5px;
+        border: 1px solid black;
     }
     h1 {
         margin-top: 0;
     }
     margin-bottom: 50px;
-    border-left: 5px solid black;
     padding-left: 10px;
 }
 
